--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="script.js" defer></script>
     </head>
 <body>
-    <h1 id="judul" onClick="sembunyi">Coba deh, kamu bucin ga?</h1>
+    <h1 id="judul" onClick="sembunyi">Coba deh, kamu bucin ga sih?</h1>
     <h3 id="judul2" onClick="tampilkan" style="display: none; text-align: center; justify-content: center; font-weight: 900; font-size: 50px;">Hasil nya:</h3>
     <!-- ini iklan search google -->
     <script async src="https://cse.google.com/cse.js?cx=b3ccb4ade9fcd1ec8"></script>
